--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"svelte-preprocess": "^4.10.1",
 		"svelte2tsx": "^0.5.10",
 		"three": "^0.140.2",
+		"three-globe": "^2.24.5",
 		"threlte": "^3.13.0",
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2"
