--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "photon",
+	"name": "photon-tools",
 	"version": "0.0.01",
 	"scripts": {
 		"dev": "vite dev",
@@ -37,5 +37,9 @@
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2"
 	},
-	"type": "module"
+	"type": "module",
+	"exports": {
+    "./package.json": "./package.json",
+    ".": "./index.js"
+  }
 }
