--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "photon-tools",
-	"version": "0.0.01",
+	"version": "0.0.02",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -24,22 +24,24 @@
 		"lamina": "^1.1.20",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
-		"rxjs": "^7.5.5",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.2.6",
 		"svelte-cubed": "^0.2.1",
-		"svelte-fuse-rx": "^0.0.106",
 		"svelte-preprocess": "^4.10.1",
 		"svelte2tsx": "^0.5.10",
-		"three": "^0.140.2",
 		"three-globe": "^2.24.5",
-		"threlte": "^3.13.0",
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2"
 	},
+	"dependencies": {
+		"rxjs": "^7.5.5",
+		"svelte-fuse-rx": "^0.0.106",
+		"three": "^0.140.2",
+		"threlte": "^3.13.0"
+	},
 	"type": "module",
 	"exports": {
-    "./package.json": "./package.json",
-    ".": "./index.js"
-  }
+		"./package.json": "./package.json",
+		".": "./index.js"
+	}
 }
