--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
 		"typescript": "~4.6.2"
 	},
 	"dependencies": {
+		"@dimforge/rapier3d-compat": "^0.9.0",
+		"@threlte/core": "^4.3.1",
+		"@threlte/extras": "^4.1.0",
+		"@threlte/rapier": "^0.0.3",
 		"rxjs": "^7.5.5",
 		"svelte-fuse-rx": "^0.0.106",
-		"three": "^0.140.2",
-		"threlte": "^3.13.0"
+		"three": "^0.140.2"
 	},
 	"type": "module",
 	"exports": {
