--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "photon-tools",
-	"version": "0.0.03",
+	"version": "0.0.04",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -23,9 +23,12 @@
 		"lamina": "^1.1.20",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
+		"rxjs": "^7.5.5",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.2.6",
 		"svelte-cubed": "^0.2.1",
+		"svelte-fuse-rx": "^0.0.106",
+		"svelte-kbc": "^0.0.5",
 		"svelte-preprocess": "^4.10.1",
 		"svelte2tsx": "^0.5.10",
 		"three-globe": "^2.24.5",
@@ -34,12 +37,10 @@
 	},
 	"dependencies": {
 		"@dimforge/rapier3d-compat": "^0.9.0",
-		"@threlte/core": "^4.3.1",
-		"@threlte/extras": "^4.1.0",
-		"@threlte/rapier": "^0.1.0",
-		"rxjs": "^7.5.5",
-		"svelte-fuse-rx": "^0.0.106",
-		"three": "^0.140.2"
+		"@threlte/core": "^4.3.3",
+		"@threlte/extras": "^4.5.1",
+		"@threlte/rapier": "^0.5.0",
+		"three": "^0.146.0"
 	},
 	"type": "module",
 	"exports": {
