--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"lamina": "^1.1.20",
+		"postprocessing": "^6.29.1",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"rxjs": "^7.5.5",
