--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"svelte-fuse-rx": "^0.0.106",
 		"svelte-kbc": "^0.0.5",
 		"svelte-preprocess": "^4.10.1",
+		"svelte-sequential-preprocessor": "^0.0.7",
 		"svelte2tsx": "^0.5.10",
 		"three-globe": "^2.24.5",
 		"tslib": "^2.3.1",
@@ -38,8 +39,9 @@
 	},
 	"dependencies": {
 		"@dimforge/rapier3d-compat": "^0.9.0",
-		"@threlte/core": "^4.3.3",
-		"@threlte/extras": "^4.5.1",
+		"@threlte/core": "^5.0.2",
+		"@threlte/extras": "^4.8.0",
+		"@threlte/preprocess": "^0.0.2",
 		"@threlte/rapier": "^0.5.0",
 		"three": "^0.146.0"
 	},
